--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="file:///C:/Users/ABC/OneDrive/Desktop/2/index.html">Home</a>
     <a href="file:///C:/Users/ABC/OneDrive/Desktop/2/Student.html">Create Profile</a>
     <a href="file:///C:/Users/ABC/OneDrive/Desktop/2/contact.html">Contact Us</a>
-    <a href="https://github.com/kedarbuch/kedarbuch/blob/main/about.html">About Me</a>
+    <a href="file:///C:/Users/ABC/OneDrive/Desktop/2/about.html">About Me</a>
 
   </div>
 </div>
